tests/src/frontend/typechecking/invalid/lvalue_tuple_2.sk
fun main(): void {
  (_, _) = Array[0, 1];
  print_raw("FAIL")
}
